--- a/README.ipynb
+++ b/README.ipynb
@@ -97,29 +97,90 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": "3. **Instale o `Grub Customizer`:**\n\n    ```bash\n    sudo apt install -y grub-customizer\n    ```\n\n4. **Abra o `Grub Customizer` (como root):**\n\n    ```bash\n    sudo grub-customizer\n    ```\n\n5. **Alternativa mais segura (terminal puro):** Se preferir evitar mudanças pelo aplicativo gráfico em ambientes híbridos (UEFI + Legacy), edite manualmente:\n\n    ```bash\n    sudo nano /etc/default/grub\n    sudo update-grub\n    ```\n\n### 1.2 Avisos importantes (LEIA com atenção)\n\n1. **Em dual-boot com UEFI/Legacy misto (ex.: Ubuntu em UEFI + Kali em Legacy/BIOS):**\n\n    - **Não use** o `grub-customizer` para reinstalar o GRUB ou trocar o modo (UEFI ↔ Legacy).\n    - **Não clique** em “Instalar no MBR” ou “Reinstalar GRUB”.\n    - Use apenas para: reordenar/renomear entradas, ocultar entradas, ajustar `timeout` e definir entrada padrão.\n\n2. **Backup recomendado antes de salvar alterações:**\n\n    ```bash\n    sudo cp -a /etc/default/grub /etc/default/grub.bak\n    sudo cp -a /boot/grub /boot/grub.bak\n    ```\n"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": "### 1.3 Código completo para configurar/instalar/usar\n\nPara configurar/instalar/usar o `GRUB Customizer` no `Kali Ubuntu` sem precisar digitar linha por linha, você pode seguir estas etapas:\n\n1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n\n    ```bash\n    Ctrl + Alt + T\n    ```\n\n2. Digite o seguinte comando e pressione `Enter`:\n\n    ```bash\n    sudo apt clean\n    sudo apt autoclean\n    sudo apt autoremove -y\n    sudo apt update\n    sudo apt --fix-broken install\n    sudo apt list --upgradable\n    sudo apt full-upgrade -y\n    sudo apt install -y grub-customizer\n    sudo cp -a /etc/default/grub /etc/default/grub.bak\n    sudo cp -a /boot/grub /boot/grub.bak\n    sudo grub-customizer\n    ```\n"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": "## 2. Consultar a versão do `Kali Linux`\n\n1. **Método padrão (recomendado):**\n\n    ```bash\n    cat /etc/os-release\n    ```\n\n2. **Usando `lsb_release` (se instalado):**\n\n    ```bash\n    lsb_release -a\n    ```\n\n    Se o comando não existir:\n\n    ```bash\n    sudo apt install -y lsb-release\n    ```\n\n3. **Comando específico do Kali:**\n\n    ```bash\n    kali-version\n    ```\n\n4. **Versão do kernel (útil para compatibilidade):**\n\n    ```bash\n    uname -r\n    ```\n"
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "3. **Reinstale o `software-properties-common`:** O pacote `software-properties-common` inclui o _script_ `add-apt-repository`. Reinstalá-lo pode corrigir quaisquer problemas no _script_:\n",
+    "## 3. Decisão de boot e arquitetura do GRUB (documentação de referência)\n",
+    "\n",
+    "Esta seção concentra decisões de arquitetura de boot (evidências, justificativas e procedimentos). Ela **não** descreve o particionamento em si; isso fica em documentação específica de layout de disco.\n",
+    "\n",
+    "### 3.1 Decisão de boot: `MBR` + `Legacy BIOS`\n",
+    "\n",
+    "Este sistema utiliza `MBR` + `Legacy BIOS` em vez de `GPT` + `UEFI` pelos seguintes motivos:\n",
+    "\n",
+    "- Compatibilidade total com hardware Dell antigo.\n",
+    "- Dual-boot mais estável entre `Ubuntu` e `Kali`.\n",
+    "- Evita conflitos entre múltiplos `GRUBs` em `EFI`.\n",
+    "- Recuperação simples via `Live USB`.\n",
+    "\n",
+    "### 3.2 Evidências técnicas (conforme capturas)\n",
+    "\n",
+    "Registre aqui as evidências observadas nas fotos/logs:\n",
+    "\n",
+    "- `/sys/firmware/efi` inexistente (indica `Legacy BIOS`).\n",
+    "- Saída do `grub-install` usando `Installing for i386-pc platform`.\n",
+    "- `GRUB` instalado no `MBR` do disco `/dev/nvme0n1`.\n",
+    "\n",
+    "### 3.3 Controle do GRUB em dual-boot\n",
+    "\n",
+    "- O `GRUB` ativo deve ser o do `Ubuntu`.\n",
+    "- Quando o `GRUB` do `Kali` assume, há falhas de boot (loop/splash travado).\n",
+    "- Estratégia adotada:\n",
+    "  - `GRUB` centralizado no `Ubuntu`.\n",
+    "  - `Kali` como entrada secundária no menu.\n",
+    "\n",
+    "### 3.4 Layout de boot funcional (resumo)\n",
+    "\n",
+    "- `/dev/nvme0n1p5` → `/boot` (`Ubuntu`).\n",
+    "- `/dev/nvme0n1p6` → `/` (`Ubuntu`).\n",
+    "- `/dev/nvme0n1p7` → `/` (`Kali`).\n",
+    "- `GRUB` instalado no `MBR` (`/dev/nvme0n1`).\n",
+    "\n",
+    "### 3.5 Problemas encontrados e causa raiz\n",
+    "\n",
+    "- Boot do `Kali` travava no splash.\n",
+    "- Entradas manuais do `GRUB` falharam.\n",
+    "\n",
+    "Causas prováveis:\n",
+    "\n",
+    "- Instalação do `Kali` sem `/boot` dedicado.\n",
+    "- `GRUB` do `Kali` tentando assumir controle do boot.\n",
+    "- Firmware `Legacy` incompatível com abordagem `UEFI` neste hardware.\n",
+    "\n",
+    "### 3.6 Recuperação do GRUB (`Legacy`)\n",
+    "\n",
+    "1. Boot via `Live USB` do `Ubuntu`.\n",
+    "2. Montar sistema:\n",
     "\n",
     "    ```bash\n",
-    "    sudo apt install --reinstall software-properties-common\n",
+    "    sudo mount /dev/nvme0n1p6 /mnt\n",
+    "    sudo mount /dev/nvme0n1p5 /mnt/boot\n",
     "    ```\n",
     "\n",
-    "4. Adicione o repositório PPA (Personal Package Archive) que contém o GRUB Customizer:\n",
+    "3. Entrar no `chroot` e reinstalar:\n",
     "\n",
     "    ```bash\n",
-    "    sudo add-apt-repository ppa:danielrichter2007/grub-customizer -y\n",
-    "    ```\n",
-    "\n",
-    "5. **Instale o `Grub` Customizer:**\n",
-    "\n",
-    "    ```bash\n",
-    "    sudo apt install grub-customizer -y\n",
-    "    ```\n",
-    "\n",
-    "6. Após a instalação, você pode abrir o `Grub Customizer` através do menu de aplicativos ou executando no `Terminal Emulator`:\n",
-    "\n",
-    "    ```bash\n",
-    "    grub-customizer\n",
+    "    sudo chroot /mnt\n",
+    "    grub-install /dev/nvme0n1\n",
+    "    update-grub\n",
+    "    exit\n",
     "    ```\n"
    ]
   },
@@ -130,48 +191,7 @@
      "languageId": "plaintext"
     }
    },
-   "source": [
-    "### 1.1 Código completo para configurar/instalar/usar\n",
-    "\n",
-    "Para configurar/instalar/usar o `GRUB Customizer` no `Kali Ubuntu` sem precisar digitar linha por linha, você pode seguir estas etapas:\n",
-    "\n",
-    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n",
-    "\n",
-    "    ```bash\n",
-    "    Ctrl + Alt + T\n",
-    "    ```\n",
-    "\n",
-    "2. Digite o seguinte comando e pressione `Enter`:\n",
-    "\n",
-    "    ```bash\n",
-    "    sudo apt clean\n",
-    "    sudo apt autoclean\n",
-    "    sudo apt autoremove\n",
-    "    sudo apt update -y\n",
-    "    sudo apt autoremove\n",
-    "    sudo apt autoclean\n",
-    "    sudo apt list --upgradable\n",
-    "    sudo apt full-upgrade -y\n",
-    "    sudo apt install --reinstall software-properties-common\n",
-    "    sudo add-apt-repository ppa:danielrichter2007/grub-customizer -y\n",
-    "    sudo apt install grub-customizer -y\n",
-    "    ```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "source": [
-    "## Referências\n",
-    "\n",
-    "[1] OPENAI. ***Instalar o `grub customizer` no `kali ubuntu` pelo `terminal emulator`.*** Disponível em: <https://chat.openai.com/c/9d00a24c-142f-46fc-965f-97504fc33492> (texto adaptado). ChatGPT. Acessado em: 31/10/2023 15:28.\n",
-    "\n",
-    "[2] JAMES, J.. ***How to install grub customizer on ubuntu 22.04 or 20.04.*** Disponível em: <https://www.Kalicapable.com/how-to-install-grub-customizer-on-ubuntu-Kali/>. ChatGPT. Acessado em: 31/10/2023 15:29."
-   ]
+   "source": "## Referências\n\n[1] OPENAI. ***Instalar o `grub customizer` no `kali ubuntu` pelo `terminal emulator`.*** Disponível em: <https://chatgpt.com/g/g-p-6980caf949648191ad6acfcdbe590f9e-instalar/c/6982bd52-ac78-8325-8330-86637d06c77f> (texto adaptado). ChatGPT. Acessado em: 05/02/2026.\n\n[2] OPENAI. ***Como consultar a versão do `Kali Linux`.*** Disponível em: <https://chatgpt.com/g/g-p-6980caf949648191ad6acfcdbe590f9e-instalar/c/6982bd52-ac78-8325-8330-86637d06c77f> (texto adaptado). ChatGPT. Acessado em: 05/02/2026.\n"
   }
  ],
  "metadata": {
