--- a/README.ipynb
+++ b/README.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ". Certifique-se de que seu sistema esteja limpo e atualizado.\n",
+    "2. Certifique-se de que seu sistema esteja limpo e atualizado.\n",
     "\n",
     "    2.1 Limpar o `cache` do gerenciador de pacotes `apt`. Especificamente, ele remove todos os arquivos de pacotes (`.deb`) baixados pelo `apt` e armazenados em `/var/cache/apt/archives/`. Digite o seguinte comando:\n",
     "    ```bash\n",
@@ -90,14 +90,47 @@
     "\n",
     "    2.8 Realmente atualizar os pacotes instalados para as suas versões mais recentes, com base na última vez que você executou `sudo apt update`. Digite o seguinte comando e pressione `Enter`:\n",
     "    ```bash\n",
-    "    sudo apt full-upgrade -y\n",
-    "    ```"
+    "    sudo "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "3. **Instale o `Grub Customizer`:**\n\n    ```bash\n    sudo apt install -y grub-customizer\n    ```\n\n4. **Abra o `Grub Customizer` (como root):**\n\n    ```bash\n    sudo grub-customizer\n    ```\n\n5. **Alternativa mais segura (terminal puro):** Se preferir evitar mudanças pelo aplicativo gráfico em ambientes híbridos (UEFI + Legacy), edite manualmente:\n\n    ```bash\n    sudo nano /etc/default/grub\n    sudo update-grub\n    ```\n\n### 1.2 Avisos importantes (LEIA com atenção)\n\n1. **Em dual-boot com UEFI/Legacy misto (ex.: Ubuntu em UEFI + Kali em Legacy/BIOS):**\n\n    - **Não use** o `grub-customizer` para reinstalar o GRUB ou trocar o modo (UEFI ↔ Legacy).\n    - **Não clique** em “Instalar no MBR” ou “Reinstalar GRUB”.\n    - Use apenas para: reordenar/renomear entradas, ocultar entradas, ajustar `timeout` e definir entrada padrão.\n\n2. **Backup recomendado antes de salvar alterações:**\n\n    ```bash\n    sudo cp -a /etc/default/grub /etc/default/grub.bak\n    sudo cp -a /boot/grub /boot/grub.bak\n    ```\n"
+   "source": [
+    "3. **Instale o `Grub Customizer`:**\n",
+    "\n",
+    "    ```bash\n",
+    "    sudo apt install -y grub-customizer\n",
+    "    ```\n",
+    "\n",
+    "4. **Abra o `Grub Customizer` (como root):**\n",
+    "\n",
+    "    ```bash\n",
+    "    sudo grub-customizer\n",
+    "    ```\n",
+    "\n",
+    "5. **Alternativa mais segura (terminal puro):** Se preferir evitar mudanças pelo aplicativo gráfico em ambientes híbridos (UEFI + Legacy), edite manualmente:\n",
+    "\n",
+    "    ```bash\n",
+    "    sudo nano /etc/default/grub\n",
+    "    sudo update-grub\n",
+    "    ```\n",
+    "\n",
+    "### 1.2 Avisos importantes (LEIA com atenção)\n",
+    "\n",
+    "1. **Em dual-boot com UEFI/Legacy misto (ex.: Ubuntu em UEFI + Kali em Legacy/BIOS):**\n",
+    "\n",
+    "    - **Não use** o `grub-customizer` para reinstalar o GRUB ou trocar o modo (UEFI ↔ Legacy).\n",
+    "    - **Não clique** em “Instalar no MBR” ou “Reinstalar GRUB”.\n",
+    "    - Use apenas para: reordenar/renomear entradas, ocultar entradas, ajustar `timeout` e definir entrada padrão.\n",
+    "\n",
+    "2. **Backup recomendado antes de salvar alterações:**\n",
+    "\n",
+    "    ```bash\n",
+    "    sudo cp -a /etc/default/grub /etc/default/grub.bak\n",
+    "    sudo cp -a /boot/grub /boot/grub.bak\n",
+    "    ```\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,18 +139,76 @@
      "languageId": "plaintext"
     }
    },
-   "source": "### 1.3 Código completo para configurar/instalar/usar\n\nPara configurar/instalar/usar o `GRUB Customizer` no `Kali Ubuntu` sem precisar digitar linha por linha, você pode seguir estas etapas:\n\n1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n\n    ```bash\n    Ctrl + Alt + T\n    ```\n\n2. Digite o seguinte comando e pressione `Enter`:\n\n    ```bash\n    sudo apt clean\n    sudo apt autoclean\n    sudo apt autoremove -y\n    sudo apt update\n    sudo apt --fix-broken install\n    sudo apt list --upgradable\n    sudo apt full-upgrade -y\n    sudo apt install -y grub-customizer\n    sudo cp -a /etc/default/grub /etc/default/grub.bak\n    sudo cp -a /boot/grub /boot/grub.bak\n    sudo grub-customizer\n    ```\n"
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": "## 2. Consultar a versão do `Kali Linux`\n\n1. **Método padrão (recomendado):**\n\n    ```bash\n    cat /etc/os-release\n    ```\n\n2. **Usando `lsb_release` (se instalado):**\n\n    ```bash\n    lsb_release -a\n    ```\n\n    Se o comando não existir:\n\n    ```bash\n    sudo apt install -y lsb-release\n    ```\n\n3. **Comando específico do Kali:**\n\n    ```bash\n    kali-version\n    ```\n\n4. **Versão do kernel (útil para compatibilidade):**\n\n    ```bash\n    uname -r\n    ```\n"
+   "source": [
+    "### 1.3 Código completo para configurar/instalar/usar\n",
+    "\n",
+    "Para configurar/instalar/usar o `GRUB Customizer` no `Kali Ubuntu` sem precisar digitar linha por linha, você pode seguir estas etapas:\n",
+    "\n",
+    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n",
+    "\n",
+    "    ```bash\n",
+    "    Ctrl + Alt + T\n",
+    "    ```\n",
+    "\n",
+    "2. Digite o seguinte comando e pressione `Enter`:\n",
+    "\n",
+    "    ```bash\n",
+    "    sudo apt clean\n",
+    "    sudo apt autoclean\n",
+    "    sudo apt autoremove -y\n",
+    "    sudo apt update\n",
+    "    sudo apt --fix-broken install\n",
+    "    sudo apt list --upgradable\n",
+    "    sudo apt full-upgrade -y\n",
+    "    sudo apt install -y grub-customizer\n",
+    "    sudo cp -a /etc/default/grub /etc/default/grub.bak\n",
+    "    sudo cp -a /boot/grub /boot/grub.bak\n",
+    "    sudo grub-customizer\n",
+    "    ```\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Decisão de boot e arquitetura do GRUB (documentação de referência)\n",
+    "## 2. Consultar a versão do `Kali Linux`\n",
+    "\n",
+    "1. **Método padrão (recomendado):**\n",
+    "\n",
+    "    ```bash\n",
+    "    cat /etc/os-release\n",
+    "    ```\n",
+    "\n",
+    "2. **Usando `lsb_release` (se instalado):**\n",
+    "\n",
+    "    ```bash\n",
+    "    lsb_release -a\n",
+    "    ```\n",
+    "\n",
+    "    Se o comando não existir:\n",
+    "\n",
+    "    ```bash\n",
+    "    sudo apt install -y lsb-release\n",
+    "    ```\n",
+    "\n",
+    "3. **Comando específico do Kali:**\n",
+    "\n",
+    "    ```bash\n",
+    "    kali-version\n",
+    "    ```\n",
+    "\n",
+    "4. **Versão do kernel (útil para compatibilidade):**\n",
+    "\n",
+    "    ```bash\n",
+    "    uname -r\n",
+    "    ```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Decisão de boot e arquitetura do `GRUB` (documentação de referência)\n",
     "\n",
     "Esta seção concentra decisões de arquitetura de boot (evidências, justificativas e procedimentos). Ela **não** descreve o particionamento em si; isso fica em documentação específica de layout de disco.\n",
     "\n",
@@ -125,7 +216,7 @@
     "\n",
     "Este sistema utiliza `MBR` + `Legacy BIOS` em vez de `GPT` + `UEFI` pelos seguintes motivos:\n",
     "\n",
-    "- Compatibilidade total com hardware Dell antigo.\n",
+    "- Compatibilidade total com _hardware_ Dell antigo.\n",
     "- Dual-boot mais estável entre `Ubuntu` e `Kali`.\n",
     "- Evita conflitos entre múltiplos `GRUBs` em `EFI`.\n",
     "- Recuperação simples via `Live USB`.\n",
@@ -143,7 +234,7 @@
     "- O `GRUB` ativo deve ser o do `Ubuntu`.\n",
     "- Quando o `GRUB` do `Kali` assume, há falhas de boot (loop/splash travado).\n",
     "- Estratégia adotada:\n",
-    "  - `GRUB` centralizado no `Ubuntu`.\n",
+    "  - `GRUB` centralizado no `Kali`.\n",
     "  - `Kali` como entrada secundária no menu.\n",
     "\n",
     "### 3.4 Layout de boot funcional (resumo)\n",
@@ -186,12 +277,153 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. GRUB no Kali: configuracao, layout e operacao (Legacy BIOS / MBR)\n",
+    "\n",
+    "Este documento descreve como configurar o `GRUB` do `Kali Linux` para atuar\n",
+    "como bootloader principal do sistema, bem como reproduzir o layout classico\n",
+    "(tema azul padrao), conforme exibido durante o boot.\n",
+    "\n",
+    "### 4.1 Contexto do ambiente\n",
+    "\n",
+    "- Sistema principal de boot: `Kali Linux`.\n",
+    "- Metodo de boot: `Legacy BIOS` + `MBR`.\n",
+    "- Disco: `/dev/nvme0n1`.\n",
+    "- `GRUB` instalado como: `i386-pc`.\n",
+    "- Sistemas detectados:\n",
+    "  - `Kali GNU/Linux`.\n",
+    "  - `Ubuntu 22.04 LTS`.\n",
+    "  - `Windows 10`.\n",
+    "\n",
+    "### 4.2 Modo de boot detectado\n",
+    "\n",
+    "- Firmware: `Legacy BIOS` (nao `UEFI`).\n",
+    "- Evidencias:\n",
+    "  - `/sys/firmware/efi` inexistente.\n",
+    "  - `GRUB` instalado como `i386-pc`.\n",
+    "  - Boot realizado via `MBR` do disco `/dev/nvme0n1`.\n",
+    "\n",
+    "> Observacao: em sistemas `Legacy`, nao existe particao `EFI`. Todo o controle\n",
+    "> de boot ocorre via `MBR` e arquivos em `/boot/grub`.\n",
+    "\n",
+    "### 4.3 Tornando o GRUB do Kali o bootloader principal\n",
+    "\n",
+    "Isto garante que:\n",
+    "\n",
+    "- O `GRUB` do `Kali` sobrescreva o `MBR`.\n",
+    "- O menu exibido ao ligar a maquina seja o do `Kali`.\n",
+    "- Outros sistemas sejam apenas entradas no menu.\n",
+    "\n",
+    "Caso seja necessario reinstalar manualmente:\n",
+    "\n",
+    "```bash\n",
+    "sudo grub-install /dev/nvme0n1\n",
+    "sudo update-grub\n",
+    "```\n",
+    "\n",
+    "### 4.4 Layout classico do GRUB (tema azul)\n",
+    "\n",
+    "O layout exibido (fundo azul, fonte branca, sem imagem) corresponde\n",
+    "ao tema padrao do `GRUB`, sem custom themes.\n",
+    "\n",
+    "Para garantir esse layout:\n",
+    "\n",
+    "Arquivo principal:\n",
+    "\n",
+    "- `/etc/default/grub`\n",
+    "\n",
+    "Configuracao recomendada:\n",
+    "\n",
+    "- `GRUB_TIMEOUT=10`\n",
+    "- `GRUB_TIMEOUT_STYLE=menu`\n",
+    "- `GRUB_DEFAULT=0`\n",
+    "- `GRUB_GFXMODE=text`\n",
+    "- `GRUB_TERMINAL=console`\n",
+    "\n",
+    "Importante: nao definir `GRUB_THEME` garante que o `GRUB` utilize\n",
+    "o layout classico padrao.\n",
+    "\n",
+    "Apos qualquer alteracao:\n",
+    "\n",
+    "```bash\n",
+    "sudo update-grub\n",
+    "```\n",
+    "\n",
+    "### 4.5 Geracao automatica das entradas\n",
+    "\n",
+    "O `Kali` detecta automaticamente outros sistemas via `os-prober`\n",
+    "(quando habilitado):\n",
+    "\n",
+    "- `Ubuntu`.\n",
+    "- `Windows`.\n",
+    "- Outras instalacoes `Linux`.\n",
+    "\n",
+    "As entradas sao geradas em:\n",
+    "\n",
+    "- `/boot/grub/grub.cfg`\n",
+    "\n",
+    "Nao edite esse arquivo manualmente.\n",
+    "\n",
+    "### 4.6 Entradas customizadas (opcional)\n",
+    "\n",
+    "Entradas adicionais podem ser definidas em:\n",
+    "\n",
+    "- `/etc/grub.d/40_custom`\n",
+    "\n",
+    "Exemplo:\n",
+    "\n",
+    "```bash\n",
+    "menuentry \"Sistema personalizado\" {\n",
+    "    set root=(hd0,msdos7)\n",
+    "    linux /boot/vmlinuz root=/dev/nvme0n1p7 ro\n",
+    "    initrd /boot/initrd.img\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Sempre regenerar o `GRUB` apos alteracoes:\n",
+    "\n",
+    "```bash\n",
+    "sudo update-grub\n",
+    "```\n",
+    "\n",
+    "### 4.7 Observacoes importantes\n",
+    "\n",
+    "- Em sistemas `Legacy`, misturar `UEFI` e `BIOS` gera falhas de boot.\n",
+    "- Apenas um `GRUB` deve controlar o `MBR`.\n",
+    "- O `GRUB` do `Kali` mostrou-se mais estavel neste ambiente.\n",
+    "- Reboots podem resolver travamentos iniciais causados por\n",
+    "  inicializacao de drivers (`GPU`, `ACPI`, `initramfs`).\n",
+    "\n",
+    "### 4.8 Resultado final esperado\n",
+    "\n",
+    "- `GRUB` do `Kali` exibido ao ligar a maquina.\n",
+    "- Layout azul classico.\n",
+    "- Entradas para `Kali`, `Ubuntu` e `Windows`.\n",
+    "- Boot funcional sem dependencia do `GRUB` do `Ubuntu`.\n",
+    "\n",
+    "### 4.9 Referencias\n",
+    "\n",
+    "- `man grub-install`\n",
+    "- `man update-grub`\n",
+    "- <https://www.gnu.org/software/grub/>\n",
+    "- <https://www.kali.org/docs/troubleshooting/grub-recovery/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "source": "## Referências\n\n[1] OPENAI. ***Instalar o `grub customizer` no `kali ubuntu` pelo `terminal emulator`.*** Disponível em: <https://chatgpt.com/g/g-p-6980caf949648191ad6acfcdbe590f9e-instalar/c/6982bd52-ac78-8325-8330-86637d06c77f> (texto adaptado). ChatGPT. Acessado em: 05/02/2026.\n\n[2] OPENAI. ***Como consultar a versão do `Kali Linux`.*** Disponível em: <https://chatgpt.com/g/g-p-6980caf949648191ad6acfcdbe590f9e-instalar/c/6982bd52-ac78-8325-8330-86637d06c77f> (texto adaptado). ChatGPT. Acessado em: 05/02/2026.\n"
+   "source": [
+    "## Referências\n",
+    "\n",
+    "[1] OPENAI. ***Instalar o `grub customizer` no `kali ubuntu` pelo `terminal emulator`.*** Disponível em: <https://chatgpt.com/g/g-p-6980caf949648191ad6acfcdbe590f9e-instalar/c/6982bd52-ac78-8325-8330-86637d06c77f> (texto adaptado). ChatGPT. Acessado em: 05/02/2026.\n",
+    "\n",
+    "[2] OPENAI. ***Como consultar a versão do `Kali Linux`.*** Disponível em: <https://chatgpt.com/g/g-p-6980caf949648191ad6acfcdbe590f9e-instalar/c/6982bd52-ac78-8325-8330-86637d06c77f> (texto adaptado). ChatGPT. Acessado em: 05/02/2026.\n"
+   ]
   }
  ],
  "metadata": {
